Updated readme and examples

--- a/brotli/Examples.ipynb
+++ b/brotli/Examples.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -71,13 +71,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2045128\n"
+     ]
+    }
+   ],
    "source": [
-    "compressed_data = brotli.compress(dataset.tobytes())"
+    "import brotli\n",
+    "compressed_data = brotli.compress(dataset[0].tobytes())\n",
+    "print(len(compressed_data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1904011\n"
+     ]
+    }
+   ],
+   "source": [
+    "import bitshuffle\n",
+    "compressed_data_bitshuffle = bitshuffle.compress_lz4(dataset[0])\n",
+    "print(len(compressed_data_bitshuffle))"
    ]
   },
   {
